# moui-nanovg-example

./: .gitignore  .gitmodules  README.md  common.gypi
android/: .gitignore  settings.gradle
android/app/: CMakeLists.txt  build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: jni.cc
android/app/src/main/java/com/ollix/nanovg/: MainActivity.kt
android/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
android/gradle/wrapper/: gradle-wrapper.properties
app/: CMakeLists.txt  app.gyp  application.cc  application.h  demo_view.cc  demo_view.h  main.cc
ios/: CMakeLists.txt  Info.plist  LaunchScreen.storyboard  MOAppDelegate.h  MOAppDelegate.mm  demo.gyp  main.mm
mac/: CMakeLists.txt  Info.plist  MOAppDelegate.h  MOAppDelegate.mm  MainMenu.xib  demo.gyp  main.mm
